# Coffee-Shop-Sales-Analysis

./: .dockerignore  .gitignore  README.md  docker-compose.yml  hello.py  pyproject.toml
.devcontainer/: devcontainer.json
app/: .env  Dockerfile  app.py  docker-compose.yml  ingest_data.py  load_sample_data.py  makefile  models.py  requirements.txt  truncate_all_tables.py
app/data/: customers_sample.json  items_sample.json  payment_methods_sample.json  transactions_sample.json
elt-pipeline/airflow/: Dockerfile  docker-compose.yaml
elt-pipeline/airflow/.dbt/: .user.yml  profiles.yml
elt-pipeline/airflow/.dlt/: config.toml
elt-pipeline/airflow/dags/: cafe_data_load.py
elt-pipeline/airflow/dbt/coffee_shop_sales_analysis/: Custom Query-17-04-2025-16-40-48.sql  dbt_project.yml
elt-pipeline/airflow/dbt/coffee_shop_sales_analysis/models/cafe/: source.yml
elt-pipeline/airflow/dbt/coffee_shop_sales_analysis/models/cafe/marts/: dim_items.sql  dim_payment_methods.sql  dim_transaction_items.sql  fct_transactions.sql
elt-pipeline/airflow/dbt/coffee_shop_sales_analysis/models/cafe/staging/: stg_customers.sql  stg_items.sql  stg_payment_methods.sql  stg_transaction_items.sql  stg_transactions.sql
elt-pipeline/airflow/scripts/: cafe_gcs2bq.py  cafe_postgres2gcs.py  cafe_transformation_dbt.py
elt-pipeline/dlt/: .gitignore  coffee_db_pipeline.py  requirements.txt
streamlit_app/: .dockerignore  Dockerfile  coffee_shop_sales_analysis.py  docker-compose.yml  requirements.txt
terraform/: main.tf  variables.tf
(+1 files in other folders)
