[project]
name = "coffee-shop-sales-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.10"
dependencies = [
    "dbt-bigquery>=1.9.1",
    "dbt-core>=1.9.4",
    "dlt[bigquery,gs]>=1.9.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "psycopg2>=2.9.10",
    "sqlalchemy>=2.0.40",
    "sqlmodel>=0.0.24",
    "streamlit>=1.44.1",
    "uvicorn>=0.34.0",
]

[tool.uv.workspace]
members = ["streamlit", "streamlit_app"]
